--- a/ImageToMidi/MainWindow.xaml
+++ b/ImageToMidi/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ImageToMidi"
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="Convert Image Pixels To MIDI Notes" 
         Height="350" Width="525"
         AllowDrop="True" DragOver="Window_DragOver" Drop="Window_Drop">
     <Grid Width="Auto" >
