Add Make Histogram MIDI Feature

--- a/ImageToMidi/MainWindow.xaml
+++ b/ImageToMidi/MainWindow.xaml
@@ -10,11 +10,11 @@
         AllowDrop="True" DragOver="Window_DragOver" Drop="Window_Drop">
     <Grid Width="Auto" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
-            <GroupBox Header="Options"  HorizontalAlignment="Stretch" VerticalAlignment="Top">
+            <GroupBox Header="Options" Margin="8"  HorizontalAlignment="Stretch" VerticalAlignment="Top">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -41,7 +41,7 @@
                     </StackPanel>
                 </Grid>
             </GroupBox>
-            <Grid HorizontalAlignment="Center" VerticalAlignment="Bottom">
+            <Grid Margin="0,8" HorizontalAlignment="Center" VerticalAlignment="Bottom">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
@@ -49,11 +49,16 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Button Grid.Column="0" Grid.Row="0" x:Name="btnPaste" Content="Paste Image" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="75" Click="btnPaste_Click" />
-                <Button Grid.Column="1" Grid.Row="0" x:Name="btnPlay" Content="Play MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="75" Click="btnPlay_Click" Visibility="Collapsed" />
-                <Button Grid.Column="0" Grid.Row="1" x:Name="btnLoad" Content="Load Image" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="75" Click="btnLoad_Click"/>
-                <Button Grid.Column="1" Grid.Row="1" x:Name="btnSave" Content="Save MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="75" Click="btnSave_Click"/>
+                <Button Grid.Column="0" Grid.Row="0" x:Name="btnPaste" Content="Paste Image" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnPaste_Click" />
+                <Button Grid.Column="1" Grid.Row="0" x:Name="btnLoad" Content="Load Image" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnLoad_Click"/>
+                <Button Grid.Column="0" Grid.Row="1" x:Name="btnPlay" Content="Play MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnPlay_Click" Visibility="Collapsed" />
+                <Button Grid.Column="1" Grid.Row="1" x:Name="btnStop" Content="Stop MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnPlay_Click" Visibility="Collapsed" />
+                <Button Grid.Column="0" Grid.Row="2" x:Name="btnSaveHistMidi" Content="Histogram MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnSave_Click"/>
+                <Button Grid.Column="1" Grid.Row="2" x:Name="btnSavePixelMidi" Content="Pixel MIDI" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8" Width="104" Click="btnSave_Click"/>
             </Grid>
         </Grid>
         <Viewbox Grid.Column="1" Stretch="Uniform" StretchDirection="DownOnly">
